--- a/E-commerce-ASP/Views/Proprietaire/DeclareProblem.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/DeclareProblem.cshtml
@@ -1,4 +1,4 @@
-﻿@model E_commerce_ASP.Models.User
+﻿@model E_commerce_ASP.Models.Problem
 @{
     ViewBag.Title = "DeclareProblem";
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
@@ -33,20 +33,19 @@
                         </div>
                         <!---->
 
-                        @using (Html.BeginForm("DeclareProblem", "Proprietaire", FormMethod.Post))
+                        @using (Html.BeginForm("DeclareProblem", "Proprietaire", FormMethod.Post,new { enctype = "multipart/form-data" }))
                          {
                             @Html.AntiForgeryToken()
 
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            @Html.HiddenFor(model => model.RealId)
-
+                          
                             <div class="row">
 
                                 <div class="col-12">
                                     <div class="form-group message">
-                                        @Html.LabelFor(m => m.Problem, new { @class = "control-label" })
-                                        @Html.TextAreaFor(m => m.Problem)
-                                        @Html.ValidationMessageFor(m => m.Problem, "", new { @class = "text-danger" })
+                                        @Html.LabelFor(m => m.Complaint, new { @class = "control-label" })
+                                        @Html.TextAreaFor(m => m.Complaint)
+                                        @Html.ValidationMessageFor(m => m.Complaint, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
