--- a/E-commerce-ASP/Views/Shared/_AdminLayout.cshtml
+++ b/E-commerce-ASP/Views/Shared/_AdminLayout.cshtml
@@ -61,6 +61,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Tous les Utilisateurs
                         </a>
+                        <a class="nav-link" href="~/Admin/ListeProbleme">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Listes des problèmes
+                        </a>
                         <a class="nav-link" href="~/Admin/ListeFavoris">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Liste Favoris
