--- a/E-commerce-ASP/Views/Admin/ListeProbleme.cshtml
+++ b/E-commerce-ASP/Views/Admin/ListeProbleme.cshtml
@@ -17,6 +17,49 @@
         <div class="card mb-4">
 
         </div>
+
+        <div class="row">
+            <div class="col-xl-3 col-md-6">
+                <div class="card bg-primary text-white mb-4">
+                    <div class="card-body">Products Logs</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-white stretched-link" href="~/Admin/Historique">View Details</a>
+                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card bg-warning text-white mb-4">
+                    <div class="card-body">User Details</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-white stretched-link" href="~/Admin/DashBoard">View Details</a>
+                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card bg-success text-white mb-4">
+                    <div class="card-body">View Complaints</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-white stretched-link" href="~/Admin/ListeProbleme">View Details</a>
+                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card bg-danger text-white mb-4">
+                    <div class="card-body">Back to E-shop</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-white stretched-link" href="~/Home/Index">View Details</a>
+                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card mb-4">
+
+        </div>
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
@@ -45,24 +88,24 @@
                         @foreach (var item in Model)
                         {
 
-                        <tr>
-                            <td>@item.Id</td>
-                            @{
-                                E_commerce_ASP.Models.User UserHis = db.RealUsers.Where(u => u.RealId == item.UserId).First();
-                            }
+                            <tr>
+                                <td>@item.Id</td>
+                                @{
+                                    E_commerce_ASP.Models.User UserHis = db.RealUsers.Where(u => u.RealId == item.UserId).First();
+                                }
 
-                            @if (UserHis.Nature.Equals("Particular"))
-                            {
-                                <td>@UserHis.FirstName @UserHis.LastName</td>
-                            }
-                            else
-                            {
-                                <td>@UserHis.CompanyName</td>
-                            }
-                            <td>@item.Complaint</td>
-                            <td>@item.Date.ToString()</td>
+                                @if (UserHis.Nature.Equals("Particular"))
+                                {
+                                    <td>@UserHis.FirstName @UserHis.LastName</td>
+                                }
+                                else
+                                {
+                                    <td>@UserHis.CompanyName</td>
+                                }
+                                <td>@item.Complaint</td>
+                                <td>@item.Date.ToString()</td>
 
-                        </tr>
+                            </tr>
                         }
 
 
