--- a/E-commerce-ASP/Views/Shared/_AdminLayout.cshtml
+++ b/E-commerce-ASP/Views/Shared/_AdminLayout.cshtml
@@ -50,16 +50,12 @@
                         <div class="sb-sidenav-menu-heading">Core</div>
                         <a class="nav-link" href="~/Admin/DashBoard">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Dashboard
+                            Admin Dashboard
                         </a>
                         <div class="sb-sidenav-menu-heading">Settings</div>
                         <a class="nav-link" href="~/Admin/Historique">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Historique Produits
-                        </a>
-                        <a class="nav-link" href="~/Admin/DetailUtilisateur">
-                            <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                            Tous les Utilisateurs
                         </a>
                         <a class="nav-link" href="~/Admin/ListeProbleme">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
